--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     ],
     "rules": {
         "react/jsx-filename-extension": 0,
-        "arrow-parens": 0
+        "arrow-parens": 0,
+        "no-underscore-dangle": 0
     }
 }
